--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.android.support:design:23.4.0'
     compile 'com.squareup.picasso:picasso:2.5.0'
     compile 'com.squareup.picasso:picasso:2.3.2'
+    compile 'com.roomorama:caldroid:3.0.1'
 }
