Логика экрана фото несколько улучшена

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         </activity>
         <activity android:name=".Calendar" >
         </activity>
-        <activity android:name=".Photo" >
+        <activity android:name=".PhotoActivity" >
         </activity>
     </application>
 
