--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,9 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
+    compile 'com.android.support:cardview-v7:23.4.0'
+    compile 'com.github.rey5137:material:1.2.4'
     compile 'com.squareup.picasso:picasso:2.5.0'
-    compile 'com.squareup.picasso:picasso:2.3.2'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.roomorama:caldroid:3.0.1'
 }
