--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,11 @@ dependencies {
     compile 'com.android.support:design:23.4.0'
     compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.github.rey5137:material:1.2.4'
-    compile 'com.squareup.picasso:picasso:2.5.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.google.firebase:firebase-database:9.0.2'
+    compile 'com.google.code.gson:gson:2.7'
     compile 'com.roomorama:caldroid:3.0.1'
 }
+
+// it must be at bottom!
+apply plugin: 'com.google.gms.google-services'
