--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         </activity>
         <activity android:name=".Full" >
         </activity>
-        <activity android:name=".Calendar" >
+        <activity android:name=".CalendarActivity" >
         </activity>
         <activity android:name=".PhotoActivity" >
         </activity>
